--- a/templates/warehouse_locations.html
+++ b/templates/warehouse_locations.html
@@ -339,33 +339,10 @@
 
 {% block extra_js %}
 <script>
-function editWarehouse(id, name, code, description) {
-    document.getElementById('editWarehouseForm').action = '{{ url_for("web.edit_warehouse", warehouse_id=0) }}'.replace('0', id);
-    document.getElementById('edit_warehouse_code').value = code;
-    document.getElementById('edit_warehouse_name').value = name;
-    document.getElementById('edit_warehouse_description').value = description;
-    new bootstrap.Modal(document.getElementById('editWarehouseModal')).show();
-}
-
-function deleteWarehouse(id, name, code) {
-    document.getElementById('deleteWarehouseForm').action = '{{ url_for("web.delete_warehouse", warehouse_id=0) }}'.replace('0', id);
-    document.getElementById('delete_wh_code').textContent = code;
-    document.getElementById('delete_wh_name').textContent = name;
-    new bootstrap.Modal(document.getElementById('deleteWarehouseModal')).show();
-}
-
-function editLocation(id, locationCode, description) {
-    document.getElementById('editLocationForm').action = '{{ url_for("web.edit_warehouse_location", location_id=0) }}'.replace('0', id);
-    document.getElementById('edit_location_code').value = locationCode;
-    document.getElementById('edit_location_description').value = description;
-    new bootstrap.Modal(document.getElementById('editLocationModal')).show();
-}
-
-function deleteLocation(id, warehouseName, locationCode) {
-    document.getElementById('deleteLocationForm').action = '{{ url_for("web.delete_warehouse_location", location_id=0) }}'.replace('0', id);
-    document.getElementById('delete_warehouse_name').textContent = warehouseName;
-    document.getElementById('delete_location_code').textContent = locationCode;
-    new bootstrap.Modal(document.getElementById('deleteLocationModal')).show();
-}
+    const EDIT_WAREHOUSE_URL_TPL = "{{ url_for('web.edit_warehouse', warehouse_id=0) }}";
+    const DELETE_WAREHOUSE_URL_TPL = "{{ url_for('web.delete_warehouse', warehouse_id=0) }}";
+    const EDIT_LOCATION_URL_TPL = "{{ url_for('web.edit_warehouse_location', location_id=0) }}";
+    const DELETE_LOCATION_URL_TPL = "{{ url_for('web.delete_warehouse_location', location_id=0) }}";
 </script>
+<script src="{{ url_for('static', filename='js/warehouse_locations.js') }}" defer></script>
 {% endblock %}
